--- a/Histoire.html
+++ b/Histoire.html
@@ -21,22 +21,25 @@
   <a href="https://www.m-ea.eu/jeune-public-et-etudiants/oscar/" style="float:right">Concours des jeunes </a>
 </div>
 
-<div class="row">
+div class="row">
   <div class="leftcolumn">
     <div class="card">
       <h2>Festival bridge</h2>
-      <p>Le pont se situe aux chutes du Niagara entre Canada et Etats-Unis. Il date de l’époque contemporaine. Le pont a mis plus de 3 ans à être conçu. Il a débuté en 2018 et a ouvert ses portes en 2021. Le pont mesure 200m de longueur et 20m de largeur. Ce pont a été construit pour traverser les chutes du Niagara tout en regardant un film, en ayant la possibilité de s’assoir sur des sièges, de marcher et de manger. L’entrée sur le pont est gratuite contrairement à l’entrée du cinéma qui s’élève à 14,99€, le prix de la navette est de 3,99€ pour aller du parking jusqu’au pont à acheter en ligne. Il y aura plusieurs magasins de souvenir, des mini marchés et des snacks pour se remplir le ventre.</p>
+      <p>Le Donald Trump célèbre Président des  États-Unis a  imaginé   un  pont aux chutes du Niagara près de la frontière entre le Canada et l’Amérique, pour être sûr qu’aux prochaines élections il soit élu comme nouveau président des USA. C’est un grand homme avec beaucoup d’influence, il n’a pas un grand cœur et ne s’occupe pas d’écologie.  Il rêvait d’un pont qui serait à la fois original et populaire, un pont dont tout le monde (inc) entendrait  parler. Il a eu son idée en 2017 qu’il voulut mettre en œuvre le plus vite possible. Il nous a montré  son influence dans le monde avec ce pont, et a signé  un contrat avec le président du Canada Justin Trudeau, avec qui il travailla pour la construction du pont.</p>
     </div>
     <div class="card">
       <h2>Les personnage importants </h2>
-      <p>Donald Trump célèbre Président des Etats-Unis a voulu faire le pont aux chutes du Niagara près de la frontière Canada Amérique, pour être sûr qu’aux prochaine élections il soit élu comme nouveau président des USA. C’est un grand homme avec beaucoup d’influence, il n’a pas un grand cœur et ne s’occupe pas d’écologie.  Il rêvait d’un pont qui serai à la fois original et populaire, un pont dont tout le monde en entendrais parlés. Il a eu son idée en 2017 qu’il voulut mettre en œuvre le plus vite possible. Il nous a montrer son influence dans le monde avec ce pont, et a signé à contrat avec le président du Canada Justin Trudeau, avec qui il travailla pour la construction du pont. </p>
+      <p>Ils ont fait  appel  au célèbre  architecte Ralph Bartholdi, descendant de Auguste Bartholdi, né le 2 août 1964 à Colmar.  À ses débuts  ilest un photographe amateur de la photographie de voyage. Il  débuta la création du plan du pont en 2018. Ralph avait déjà participé à de grands projets comme l’hôtel Morpheus à Macaoen  Chine en 2018. Ralph Bartholdi a travaillé avec Mathioli de Vinci, né le 15 avril 1952 à Florence et qui est mort quelque temps après la construction du Festival Bridge le 2 mai 2023. Il a travaillé durant 1 an au côté de Bartholdi, pour améliorer   l’esthétique du pont. </p>
     </div>
 	<div class="card">
-	<p>Ils ont choisi comme architecte Ralph Bartholdi, descendant de Auguste Bartholdi, née le 2 août 1964 à Colmar. A ses débuts c’est un photographe amateur de la photographie de voyage. Il débuta la création du plan du pont en 2018. Ralph avait déjà participer à des grands projets comme 
-Notre architecte a travaillé avec Mathioli de Vinci, né le 15 avril 1952 à Florence et est mort quelque temps après la construction du Festival Bridge le 2 mai 2023. Il a travaillé durant 1 ans au côté de Bartholdi, pour améliorer le côté esthétique du pont. <p>
+	<p>Mais Donald Trump voulait un espace encore plus vivant  en ajoutant un cinéma sur le pont. De plus  Justin Trudeau a voulu  créer un Festival de la nature ainsi  tous les visiteurs peuvent  se retrouver et participer à des activités créatives  .  Il ont tous  deux donné  un espace animé pour que les visiteurs puissent avoir des activités et pour rendre le lieu encore plus vivant .
+L’ingénieur qui a été choisi pour diriger les opérations se nomme Olivier Pascal né le 2 août 1979 à Clermontg Ferrand en Auvergne. Il est mathématicien et inventeur . Les premiers travaux d’Oliviere Pascal concernent les sciences naturelles et appliquées. Avec  ses coéquipiers ils construisirent le pont mais malgré les grandes demande de nos deux commanditaires la construction du  pont se compliquait : le projecteur qui devait projeter les images des films avait un problème car projeter une image sur l’eau était quasiment impossible . Mais notre ingénieur en chef a su résoudre ce problème.   <p>
   </div>
-  <div class="card">
-  <p>L’ingénieur qui a été choisi pour diriger les opérations se nomme Olivier Pascal né le 2 aout 1979 à Clermont en Auvergne. Il est mathématicien, physicien, inventeur, philosophe, moraliste et théologien français. Les premiers travaux de Pascal concernent les sciences naturelles et appliquées. Il a dirigé les opérations durant 2 ans. <p>
+  <div class="card"> 
+  <h2>Histoire du pont </h2>
+  <p>Le pont a mis plus de 3 ans à être conçu.  Le chantier  a débuté en 2018 et le cinéma a ouvert ses portes en 2021. C’est un pont d’une longueur de plus de 45cm sur la maquette et 200m en taille réelle et de plus de 4cm de largeur soit 20m en réalité. Ce pont a été construit pour traverser les chutes du Niagara tout en regardant un film, en ayant la possibilité de s’asseoir sur des sièges, de marcher et de manger. L’entrée sur le pont est gratuite contrairement à l’entrée du cinéma qui s’élève à 14,99€ pour une séance, le prix de la navette est de 3,99€ pour aller du parking jusqu’au pont, à acheter en ligne. Il y aura plusieurs magasins de souvenirs, des mini-marchés et des snacks pour se remplir le ventre.
+Pour mieux voir le rendu du pont ils ont créé une maquette, dont la base est  faite en polystyrène sur une plateforme de 50x50cm. Le pont est fait en bois sur la maquette et en béton armé dans la réalité, la roche est faite en polystyrène et l’eau est représentée par des feuilles d’aluminium froissées peintes en bleu et recouvertes par de la  résine. Et pour encore  mieux voir le rendu ils ont disposé  un zootrope  : les films qui seront diffusés  varieront selon la période dans  laquelle nous serons et aussi par rapport aux thèmes de la nature et des fêtes.
+ <p>
    </div>
   </div>
    <div class="rightcolumn">
